Table "Categorie" {
  "id_categoria" INTEGER [primary key]
  "descrizione" VARCHAR(50)
}

Table "Prodotti" {
  "id_prodotto" INTEGER [primary key]
  "nome_prodotto" VARCHAR(15)
  "id_categoria" INTEGER
  "prezzo_acquisto" DECIMAL(9,2)
  "prezzo_vendita" DECIMAL(9,2)
  "giacenza" INTEGER
  "id_fornitore" INTEGER
}

Table "Fornitori" {
  "id_fornitore" INTEGER [primary key]
  "ragione sociale" VARCHAR(50)
  "indirizzo" VARCHAR(30)
  "citta" VARCHAR(20)
  "cap" VARCHAR(5)
  "provincia" VARCHAR(2)
  "n_telefono" VARCHAR(15)  
}

Table "Ordini" {
  "id_ordine" INTEGER [primary key]
  "data_ricezione" DATE
  "data_evasione" DATE
  "id_cliente" INTEGER
  "spese_trasporto" DECIMAL(9,2)
}

Table "Clienti" {
  "id_cliente" INTEGER [primary key]
  "ragione sociale" VARCHAR(50)
  "indirizzo" VARCHAR(30)
  "citta" VARCHAR(20)
  "cap" VARCHAR(5)
  "provincia" VARCHAR(2)
  "n_telefono" VARCHAR(15)    
}

Table "Dettaglio_Ordini" {
  "id_ordine"   INTEGER [primary key]
  "id_prodotto" INTEGER [primary key]
  "quantita"    INTEGER    
}

Ref: "Prodotti"."id_categoria"         >  "Categorie"."id_categoria"
Ref: "Prodotti"."id_fornitore"         >  "Fornitori"."id_fornitore"
Ref: "Ordini"."id_cliente"             >  "Clienti"."id_cliente"
Ref: "Dettaglio_Ordini"."id_ordine"    >  "Ordini"."id_ordine"
Ref: "Dettaglio_Ordini"."id_prodotto"  >  "Prodotti"."id_prodotto"
